export interface StoricoStatoOrdineDTO {
  id: number;
  statoDa: string | null;
  statoA: string;
  eseguitoDa: string;
  nota: string | null;
  creationDate: string;
}